# skills

./: C++17.cpp  C++17.sln  CMakeLists.txt  CMakeLists.txt.user.a1b6b4d.4.8-pre1  numbers.txt  text.txt
C++17/: C++17.cpp  C++17.vcxproj  C++17.vcxproj.filters  algo.cpp  algo.h  cmb.txt  oop.cpp  oop.h  study_stl.cpp  study_stl.h  text.txt  tools.cpp  tools.h
apps/: C++11.cpp  C++17.cpp  CMakeLists.txt  aggregate_initialization.cpp  any.cpp  array_main.cpp  atomic_mailbox.cpp  binary_literals.cpp  char16_char32_wchar_t.cpp  class_template_argument_deduction.cpp  constexpr.cpp  constexpr_if.cpp  embedded_variable__func__.cpp  exchange.cpp  features_cpp11_alignment.cpp  generic_lambda.cpp  initializers_if_switch.cpp  inline_variables.cpp  inline_vars.cpp  inline_vars.h  integer_sequence.cpp  make_unique.cpp  multithreading_cpp11.cpp  nested_namespaces.cpp  noexcept.cpp  optional.cpp  packaged_task.cpp  pair_main.cpp  parallel_C++11.cpp  parallel_algorithms.cpp  pattern_factory_main.cpp  pattern_observer_main.cpp  pattern_strategy_main.cpp  quoted.cpp  return_type_deduction.cpp  rwlock_main.cpp  shared_timed_mutex.cpp  stl_cpp11.cpp  string_view.cpp  structured_binding.cpp  (+10 more)
aps/: C++17.cpp  multithreading_cpp11.cpp  pattern_factory_main.cpp  pattern_observer_main.cpp  pattern_strategy_main.cpp  rwlock_main.cpp  stl_cpp11.cpp
hdr/: algo.h  oop.h  rwlock.h  study_stl.h  tools.h
patterns/: pattern_factory.cpp  pattern_factory.h  pattern_observer.h  pattern_strategy.cpp  pattern_strategy.h
res/: list_files.txt
src/: CMakeLists.txt  ReadMe.txt  algo.cpp  cmb.txt  oop.cpp  out.txt  rwlock.cpp  study_stl.cpp  text.txt  tools.cpp
src/CPP11/multithreading/: tools.cpp  tools.h
src/CPP11/stl/: study_stl.cpp  study_stl.h
src/CPP14/: features.h
src/algo/: CMakeLists.txt  algo.cpp  algo.h
src/oop/: CMakeLists.txt  oop.cpp  oop.h
src/patterns/: CMakeLists.txt  pattern_factory.cpp  pattern_factory.h  pattern_observer.cpp  pattern_observer.h  pattern_strategy.cpp  pattern_strategy.h
src/std11/: CMakeLists.txt  study_stl.cpp  study_stl.h  tools.cpp  tools.h
src/std14/: CMakeLists.txt
src/system/: CMakeLists.txt  rwlock.cpp  rwlock.h
